- Fixed bug #50266 (conflicting types for llabs)