ext/date/php_date.c
@@ -30,16 +30,14 @@
 #include "lib/timelib.h"
 #include <time.h>
 
-#ifdef PHP_WIN32
+#ifndef HAVE_LLABS
+# ifdef PHP_WIN32
 static __inline __int64 llabs( __int64 i ) { return i >= 0? i: -i; }
-#endif
-
-#if defined(__GNUC__) && __GNUC__ < 3
+# elif defined(__GNUC__) && __GNUC__ < 3
 static __inline __int64_t llabs( __int64_t i ) { return i >= 0 ? i : -i; }
-#endif
-
-#if defined(NETWARE) && defined(__MWERKS__)
+# elif defined(NETWARE) && defined(__MWERKS__)
 static __inline long long llabs( long long i ) { return i >= 0 ? i : -i; }
+# endif
 #endif
 
 /* {{{ arginfo */
